# BassttProjectManage

./: .gitignore  CMakeLists.txt  README.md  UPLOAD_COMMANDS.ps1  git_output.txt  main.c  resource.rc
Inc/: task_manager.h
Src/: animation.c  task_manager.c  ui_controls.c  window_proc.c
_codeql_build_dir/: CMakeCache.txt  Makefile  cmake_install.cmake
